--- a/scss/main.css
+++ b/scss/main.css
@@ -23976,4 +23976,8 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.text-justify {
+  text-align: justify;
 }/*# sourceMappingURL=main.css.map */
